# python-graphql-compiler

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  setup.py
.github/workflows/: ci.yml  documentation.yml  release-drafter.yml  release.yml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
docs/source/_static/css/: style.css
examples/: config.yml  graphql_server.py  queries.graphql  queries.py  test_client.py  utils.py
python_graphql_compiler/: __init__.py  __main__.py  cli.py  code_chunk.py  parser.py  render_util.py  renderer.py  types.py  utils.py
supports/: federation_aux.graphql
tests/: test_cli.py  test_parser.py  test_python_graphql_compiler.py  test_renderer.py  test_types.py  test_utils.py
